# mynad

./: Cargo.toml  INSTALL.md  README.md
.github/workflows/: build.yml  publish.yml
src/: encoder.rs  error.rs  etude.rs  main.rs  man_con.rs  methods.rs  types.rs  utils.rs
src/server/: methods.rs  mod.rs
