[package]
name = "mynad"
version = "0.1.0"
authors = ["yuki-js <20838151+yuki-js@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.2.1"
pcsc = "2.3.1"
jsonrpc-core = "14.0.5"
jsonrpc-http-server = "14.0.5"
jsonrpc-derive = "14.0.5"
jsonrpc-core-client = "14.0.5"
sha2 = "0.8.1"

[dependencies.myna]
git = 'https://github.com/yuki-js/myna.git'
branch = 'master'
default-features = false

[dependencies.rsa]
version = "0.2.0"