[package]
name = "mynaconnect-daemon"
version = "0.1.0"
authors = ["yuki-js <20838151+yuki-js@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "14.2.0"
jsonrpc-derive = "14.2.1"
jsonrpc-core = "14.2.0"
pcsc = "2.3.1"
serde_json = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.2"
[dependencies.myna]
version = "0.3.0"
default-features = false
